--- a/public/css/projects.css
+++ b/public/css/projects.css
@@ -1,1 +1,20 @@
-div.page img.icon{border:1px solid #bdbdbd;border-radius:3px;height:200px;min-width:350px}div.row-dark{background-color:#f8f9fa}.scrollarea{overflow-y:auto}@media (max-width:992px){div.page img.icon{display:none}}
+div.page img.icon {
+  height: 200px;
+  min-width: 350px;
+  border: 1px solid #bdbdbd;
+  border-radius: 3px;
+}
+
+div.row-dark {
+  background-color: #f8f9fa;
+}
+
+.scrollarea {
+  overflow-y: auto;
+}
+
+@media (max-width: 992px) {
+  div.page img.icon {
+    display: none;
+  }
+}
